k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nomero
  labels:
    app: web
spec:
  containers:
    - name: nomero
      image: us.gcr.io/rocketseat-42/nomero:latest
      ports:
        - containerPort: 8000
