k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nomero
  name: nomero
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: nomero
