k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nomero
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - nomero.rocketseat.dev
      secretName: nomero-tls
  rules:
    - host: nomero.rocketseat.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nomero
                port:
                  number: 80
